added contact file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ContactsBrowser</string>
+    <string name="get_contacts">Get Contacts</string>
 </resources>
